--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
             <div class="text-center">
                 <div class="col-md-6 col-md-12 col-xs-12">
                     <i class="fa fa-phone"></i>
-                    <p>999-334-858</p>
+                    <p>999-722-195</p>
                 </div>
                 <div class="col-md-6 col-md-12 col-xs-12">
                     <i class="fa fa-envelope-o"></i>
-                    <a class="email" href=""><p>lisette.a.b@laboratoria.la</p></a>
+                    <a class="email" href=""><p>isamar.dvgz@laboratoria.la</p></a>
                 </div> 
             </div> 
     </div>
